crates/keron-lang/tests/corpus/errors/parse/chain_outside_reconcile.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '>' expected something else, '#', '-', '"', '"true"', '"false"', int, '[', '{', '"if"', '"for"', identifier, or '('
  --> 3:12
  |
3 | val c = a -> b
  |            ^
